<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_no_internet"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Icon -->
    <ImageView
        android:id="@+id/iv_internet"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/ic_no_internet" />

    <!-- Title -->
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/text_no_internet_connection"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <!-- Message -->
    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/text_please_turn_on_wifi"
        android:textColor="#FFFFFF"
        android:textSize="12sp" />

    <!-- Buttons Container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_cancel_no_internet"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/tt_history_cancel"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

        <Space
            android:layout_width="16dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/btn_go_to_settings"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_settings_no_internet"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/text_go_to_setting"
            android:textColor="#030712"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>
