<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#030712"
    tools:context=".feature.settings.SettingsActivity">

    <!-- Header -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="48dp"
        android:paddingBottom="16dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/arrow_left"
            app:tint="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_settings"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_semibold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" 
            android:includeFontPadding="false"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Settings List -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/header">

        <!-- Language -->
        <LinearLayout
            android:id="@+id/btn_language"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/bg_setting_item"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp"
            android:layout_marginBottom="12dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_language" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:text="@string/text_language"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_regular" 
            android:includeFontPadding="false"
            />

            <TextView
                android:id="@+id/txt_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_english"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginEnd="8dp" 
            android:includeFontPadding="false"
            />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/arrow_right2"
                app:tint="#6A7282" />
        </LinearLayout>

        <!-- Contact us -->
        <LinearLayout
            android:id="@+id/btn_contact"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/bg_setting_item"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp"
            android:layout_marginBottom="12dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_contact" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:text="@string/text_contact_us"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_regular" 
            android:includeFontPadding="false"
            />
        </LinearLayout>

        <!-- Term of Service -->
        <LinearLayout
            android:id="@+id/btn_tos"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/bg_setting_item"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp"
            android:layout_marginBottom="12dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_doc" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:text="@string/text_term_of_service"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_regular" 
            android:includeFontPadding="false"
            />
        </LinearLayout>

        <!-- Subscription Term -->
        <LinearLayout
            android:id="@+id/btn_subscription"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/bg_setting_item"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp"
            android:layout_marginBottom="12dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_bell" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:text="@string/text_subscription_term"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_regular" 
            android:includeFontPadding="false"
            />
        </LinearLayout>

        <!-- Privacy Policy -->
        <LinearLayout
            android:id="@+id/btn_privacy"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/bg_setting_item"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_privacy" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:text="@string/text_privacy_policy"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_regular" 
            android:includeFontPadding="false"
            />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>